# lunar-ics-generator-web

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yaml
src/: main.rs
src/components/: form.rs  layout.rs  mod.rs  preview.rs
src/utils/: intl.rs  js.rs  mod.rs
