[package]
name = "lunar-ics-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0"
korean-lunar-calendar = "~1.0"
log = "~0.4"
wasm-logger = "~0.2"
web-sys = { version = "~0.3", features = ["HtmlInputElement"] }
yew = { version = "~0.20", features = ["csr"] }
