[package]
name = "lunar-ics-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "~0", features = ["unstable-locales"] }
ical = { version = "~0.8", default-features = false, features = [
    "ical",
    "generator",
] }
itertools = "~0.10"
js-sys = "~0.3"
korean-lunar-calendar = "~1.0"
log = "~0.4"
wasm-bindgen = "~0.2"
wasm-logger = "~0.2"
web-sys = { version = "~0.3", features = ["Blob", "HtmlInputElement", "Url"] }
yew = { version = "~0.20", features = ["csr"] }
